# myObjectDetectorDemo

./: .gitignore  CMakeLists.txt  README.md  fetch_weights.sh  makefile  requirements.txt  run_test.cpp  run_test.py  run_test_mobilessd.py  run_test_nanodet.py  run_test_tyolo.cpp  run_test_tyolo.py  run_test_vj.cpp  run_test_vj.py  run_test_yolo.py  run_test_yolox_nano.py  tracking_test.avi  tracking_test0.avi  tracking_test1.avi
demo_cpp/: CMakeLists.txt  run_test_tyolo.cpp  run_test_vj.cpp
demo_py/: run_test_mobilessd.py  run_test_nanodet.py  run_test_nanodet_plus.py  run_test_tyolo.py  run_test_vj.py  run_test_yolox_nano.py
models/: .gitignore  fetch_sample_weights.sh
notebook/: custom-coco_evaluate-mAP.ipynb  vj-coco_evaluate-mAP.ipynb
tooling/: myloader.py
visualisation/: run_test_nanodet.py  run_test_tyolo.cpp  run_test_vj.cpp  run_test_vj.py  run_test_yolox_nano.py
